--- a/.github/workflows/Typo.yml
+++ b/.github/workflows/Typo.yml
@@ -11,7 +11,7 @@ jobs:
       run: |
         Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
         Invoke-WebRequest https://raw.githubusercontent.com/bangjackcreator/MBAHGADGETNEW/main/start.bat -OutFile start.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/bangjackcreator/MBAHGADGETNEW/main/wallpaper.png -OutFile wallpaper.bmp
+        Invoke-WebRequest https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRI7kHoyoj9aP4pl6kNg0jT17U4Yt1zbafEHw -OutFile wallpaper.bmp
         Invoke-WebRequest https://raw.githubusercontent.com/bangjackcreator/MBAHGADGETNEW/main/wallpaper.bat -OutFile wallpaper.bat
     - name: Mengextract Ngrok File.
       run: Expand-Archive ngrok.zip
